--- a/_includes/widgets/postTagList.html
+++ b/_includes/widgets/postTagList.html
@@ -11,8 +11,8 @@
 {% if post.tags.size > 0 %}
 	<div>Usando a Tag:
 		<ul class="inlineList tags">
-		{% for tag in post.tags %} 
-			<li><a href="/tags.html#{{ tag | first | cgi_encode }}">{{ tag | first }}</a>{% unless forloop.last %},{% endunless %}</li>
+		{% for tag in post.tags %}
+			<li><a href="/tags.html#{{ tag | first | cgi_escape }}">{{ tag | first }}</a>{% unless forloop.last %},{% endunless %}</li>
 		{% endfor %}
 		</ul>
 	</div>	
