--- a/_includes/widgets/tagCloud.html
+++ b/_includes/widgets/tagCloud.html
@@ -2,7 +2,7 @@
 	<h1>Tags<span class="hint">({{site.tags.size}})</span></h1>		
 	<ul class="tagCloud">
 	   {% for tag in site.tags %}      
-	   <li><a href="/tags.html#{{ tag | cgi_encode }}"">
+	   <li><a href="/tags.html#{{ tag | cgi_escape }}"">
 		{{ tag }}</a>
 		{% unless forloop.last %}, {% endunless %}
 	</li>
