--- a/_includes/widgets/postTagList.html
+++ b/_includes/widgets/postTagList.html
@@ -12,7 +12,12 @@
 	<div>Usando a Tag:
 		<ul class="inlineList tags">
 	{% for tag in post.tags %}
-			<li><a href="/tags.html#{{ tag | first | cgi_escape }}">{{ tag | first }}</a>{% unless forloop.last %},{% endunless %}</li>
+		{% if tag %}
+			<li>
+				<a href="/tags.html#{{ tag | first | cgi_escape }}">{{ tag | first }}</a>
+				{% unless forloop.last %},{% endunless %}
+			</li>
+		{% endif %}
 	{% endfor %}
 		</ul>
 	</div>	
