--- a/_includes/widgets/postTagList.html
+++ b/_includes/widgets/postTagList.html
@@ -14,7 +14,7 @@
 	{% for tag in post.tags %}
 		{% if tag %}
 			<li>
-				<a href="/tags.html#{{ tag | first | cgi_escape }}">{{ tag | first }}</a>
+				<a href="/tags.html#{{ tag }}">{{ tag }}</a>
 				{% unless forloop.last %},{% endunless %}
 			</li>
 		{% endif %}
