corrigido ausencia do endif

--- a/_includes/widgets/postTagList.html
+++ b/_includes/widgets/postTagList.html
@@ -17,7 +17,7 @@
 				<a href="/tags.html#{{ tag }}">{{ tag }}</a>
 				{% unless forloop.last %},{% endunless %}
 			</li>
-			
+		{% endif %]
 	{% endfor %}
 		</ul>
 	</div>	
