há realmente algo muito estranho acontecendo, agora passou a dizer que a tag "endfor" não é reconhecida.

--- a/_includes/categoriesbox.html
+++ b/_includes/categoriesbox.html
@@ -4,9 +4,9 @@
 		<!-- categories -->
 		<ul>
 {% for category in site.categories %}
-			<li><a
-				href="/categories.html#{{ category  }}"> {{ category }}</a>
-			</li> 
+			<li>
+				<a href="/categories.html#{{ category  }}"> {{ category }}</a>
+			</li>
 {% endfor %}
 		</ul>
 	</div>
