--- a/_includes/widgets/postTagList.html
+++ b/_includes/widgets/postTagList.html
@@ -17,7 +17,7 @@
 				<a href="/tags.html#{{ tag }}">{{ tag }}</a>
 				{% unless forloop.last %},{% endunless %}
 			</li>
-		{% endif %]
+		{% endif %}
 	{% endfor %}
 		</ul>
 	</div>	
