o objeto category no site vem como uma lista de categorias indexando seus posts, portanto ainda não sei como obter o nome das categorias disponiveis no site sem usar o filtro firts.

--- a/_includes/categoriesbox.html
+++ b/_includes/categoriesbox.html
@@ -5,7 +5,7 @@
 		<ul>
 {% for category in site.categories %}
 			<li>
-				<a href="/categories.html#{{ category.name  }}"> {{ category.name }}</a>
+				<a href="/categories.html#{{ category | first  }}"> {{ category | first }}</a>
 			</li>
 {% endfor %}
 		</ul>
