acho que agora entendi onde eu estava errando. category e tag no site vem como objeto contendo o post, já no post não vem, então não precisa usar o first. Proximo passo achar o post que estava calsando o erro inicial. (não acabou ainda)

--- a/_includes/widgets/postCategoryList.html
+++ b/_includes/widgets/postCategoryList.html
@@ -14,7 +14,7 @@
 	{% for category in post.categories %}
 		{% if category %}
 			<li>
-				<a href="/categories.html#{{ category }}">{{ category }}</a>
+				<a href="/categories.html#{{ category | cgi_escape }}">{{ category }}</a>
 				{% unless forloop.last %},{% endunless %}
 			</li>
 		{% endif %}
