--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -8,6 +8,7 @@ title: Início
 <p align="justify">Estamos trabalhando em um novo layout para nosso site!</p>
 <p align="justify">Não deixe de nos visitar usando um dos Links: 
 	<ul>
+	<li><a href="/eventos/arduinoday/2014-03-14-Arduino-Day-2014.html">Arduino Day</a></li>
 	<li><a href="https://groups.google.com/forum/?hl=pt-BR&fromgroups#!forum/arduino-minas">Grupo no Google</a>
 	</li> 
 	<li><a href="http://twitter/ArduinoMinas">Twitter @ArduinoMinas</a>
