faltou atualizar a barra lateral para ativar o recurso de promoção

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div id="sidebar-wrapper">
 	<div id="sidebar">
 		{% include categoriesbox.html %}
+		{% include promo.html %}
 		{% include resourcelinksbox.html %}
 		{% include sloganbox.html %}
 	</div>
