--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -19,7 +19,11 @@ layout: noindex
 	{% endfor %}
 	</ul>
 	<hr />
+	{% if page.projecturl %}
 	<h3>URL: <a href="{{ page.projecturl | uri_escape }}">{{ page.projecturl | uri_escape }}</a></h3>
+	{% else %}
+	<h3>Não há URL para este projeto</h3>
+	{% endif %}
 	<hr />
 	{{ content }}
 	<footer>
