Adicionado a opção de comentar um projeto

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -38,5 +38,6 @@ layout: noindex
 		{% include widgets/postTagList.html %}
 		<hr />
 		{% include socialbuttons.html %}	
+		{% include facebook/comment.html %}
 	</footer>
 </article>
