--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -165,6 +165,7 @@
                 <ul>
                 <li><a target="_blank" href="http://eclipse.org">Eclipse</a></li>
                 <li><a target="blank" href="http://arduino.cc">Arduino.cc</a></li>
+                <li><a target="blank" href="/circuitos">Simulador de Circuitos</a></li>
                 </ul>
                 </div>
                 </div>
