--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -1,34 +1,38 @@
 <!-- begin post -->
-{% if post.author %}
-{% assign author = site.data.authors[page.author] %}
-{% else %}
-{% assign author = site.data.authors[site.author] %}
-{% endif %}
-
+{%- if post.author -%}
+{%- assign author = site.data.authors[page.author] -%}
+{%- else -%}
+{%- assign author = site.data.authors[site.author] -%}
+{%- endif -%}
+{%- if post.image.feature -%}
+{%- assign imageurl = post.image.feature -%}
+{%- elsif post.image -%}
+{%- assign imageurl = post.image -%}
+{%- endif -%}
 <div class="col-sm-6">
 <div class="card">
     <div class="row">
-        {% if post.image %}
+        {%- if imageurl -%}
         <div class="col-md-5 wrapthumbnail">
             <a href="{{ post.url | absolute_url }}">
-            <div class="thumbnail" style="background-image:url({{ site.baseurl }}/{{ post.image }});">
+            <div class="thumbnail" style="background-image:url({{ site.baseurl }}/{{ imageurl }});">
             </div>
             </a>
         </div>
-        {% endif %}
+        {%- endif -%}
         <div class="col-md-7">
             <div class="card-block">
                 <h2 class="card-title"><a href="{{ post.url | absolute_url }}">{{ post.title }}</a></h2>
                 <h4 class="card-text">{{ post.excerpt | strip_html | truncatewords:25 }}</h4>
                 <div class="metafooter">
                     <div class="wrapfooter">
-                        {% if post.author %}
+                        {%- if post.author -%}
                         <span class="meta-footer-thumb">
                         <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
                         </span>
                         <span class="author-meta">
                         <span class="post-name"><a target="_blank" href="{{ author.web }}">{{ author.display_name }}</a></span><br/>
-                        {% endif %}
+                        {%- endif -%}
                         <span class="post-date">{{ post.date | date_to_string }}</span>
                         </span>
                         <span class="post-read-more"><a href="{{ post.url | absolute_url }}" title="Read Story"><i class="fa fa-link"></i></a></span>
