--- a/_includes/postlistbox.html
+++ b/_includes/postlistbox.html
@@ -1,48 +1,46 @@
-{% if include.featured and include.featured == true %}
-{% assign featured = include.featured %}
+{%- if include.featured == true -%}
+{%- assign featured = true -%}
 <section class="featured-posts">
     <div class="section-title">
         <h2><span>Em Destaque</span></h2>
     </div>
     <div class="row listfeaturedtag">
-{% else %}
-{% assign featured = false %}
-{% if paginator.previous_page %}
-{% if paginator.previous_page > 0 %}
+{%- else -%}
+{%- assign featured = false -%}
+{%- if paginator.previous_page and paginator.previous_page > 0 -%}
      <div id="jumptopageof"></div>
-{% endif %}
-{% endif %}    
+{%- endif -%}    
 <section class="recent-posts row">
     <div class="col-sm-4">
-     {% include sidebar.html ads='true' %}
+     {%- include sidebar.html ads='true' -%}
     </div>
     <div class="col-sm-8">
         <div class="section-title">
             <h2><span>Nossas Publicações</span></h2>    
         </div>
         <div class="masonrygrid row listrecent">
-{% endif %}
-{% if featured == true %}
-{% for post in site.posts %}
- {% if post.featured == true %}
-  {% include featuredbox.html %}
- {% endif %}
-{% endfor %}
-{% else %}
-{% for post in paginator.posts %}
- {% unless post.featured %}
-  {% include postbox.html %}
- {% endunless %}
-{% endfor %}
-{% endif %}
+{%- endif -%}
+{%- if featured == true -%}
+{%- for post in site.posts -%}
+ {%- if post.featured == true -%}
+  {%- include featuredbox.html -%}
+ {%- endif -%}
+{%- endfor -%}
+{%- else -%}
+{%- for post in paginator.posts -%}
+ {%- unless post.featured -%}
+  {%- include postbox.html -%}
+ {%- endunless -%}
+{%- endfor -%}
+{%- endif -%}
         </div> 
-{% if featured != true %}
+{%- if featured != true -%}
         <!-- Pagination -->
         <div class="bottompagination">
             <span class="navigation" role="navigation">
-            {% include pagination.html %}
+            {%- include pagination.html -%}
             </span>
         </div>
-{% endif %}
+{%- endif -%}
     </div>
 </section>
