--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -7,7 +7,7 @@ title: Archive
 ================================================== -->
 <section class="row recent-posts">
     <div class="col-md-4 col-lg-4">
-        {% include sidebar.html %}
+        {%- include sidebar.html -%}
     </div>
 
     <div class="col-md-8 col-lg-8">
@@ -16,11 +16,11 @@ title: Archive
         </div>
         <div class="masonrygrid row listrecent">
 
-            {% for post in page.posts %}
+            {%- for post in page.posts -%}
 
-            {% include postbox.html %}
+            {%- include postbox.html -%}
 
-            {% endfor %}
+            {%- endfor -%}
 
         </div>
     </div>
