--- a/_layouts/circuitjs1.html
+++ b/_layouts/circuitjs1.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">    
 <title>{{ page.title }} | {{site.name}}</title>
-{% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}    
+{%- if page.description -%}<meta name="description" content="{{ page.description }}">{%- endif -%}    
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Rubik:400,400i,500,500i,700,700i" rel="stylesheet">
@@ -13,11 +13,11 @@
 <link href="{{ site.baseurl }}/assets/css/circuitjs1.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/assets/css/custom.css" rel="stylesheet">
 
-{% if site.sharethis.enable %}    
+{%- if site.sharethis.enable -%}    
 <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property={{site.sharethis.property}}&product={{site.sharethis.product}}"></script>'
-{% endif %}    
+{%- endif -%}    
 
-{% if jekyll.environment == 'production' %}    
+{%- if jekyll.environment == 'production' -%}    
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -27,14 +27,14 @@
   ga('create', '{{site.google_analytics}}', 'auto');
   ga('send', 'pageview');
 </script>
-{% endif %}  
+{%- endif -%}  
 <!-- Properties can be specified to influence deferred binding -->
 <meta name='gwt:property' content='locale={{site.locale}}'>
 </head>
     
 
     
-{% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
+{%- capture layout -%}{%- if page.layout -%}layout-{{ page.layout }}{%- endif -%}{%- endcapture -%}
 <body class="{{ layout }}">
 
     
