--- a/_layouts/clean.html
+++ b/_layouts/clean.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">    
 <title>{{ page.title }} | {{site.name}}</title>
-{% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}    
-{% if jekyll.environment == 'production' %}    
+{%- if page.description -%}<meta name="description" content="{{ page.description }}">{%- endif -%}    
+{%- if jekyll.environment == 'production' -%}    
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -15,9 +15,9 @@
   ga('create', '{{site.google_analytics}}', 'auto');
   ga('send', 'pageview');
 </script>
-{% endif %}  
+{%- endif -%}  
 </head>
-{% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
+{%- capture layout -%}{%- if page.layout -%}layout-{{ page.layout }}{%- endif -%}{%- endcapture -%}
 <body >
         {{ content }}
 </body>
