--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,14 +12,14 @@ layout: default
     {{content}}
     </div>
     
-    {% if page.comments == true %}
+    {%- if page.comments == true -%}
     
     <div id="comments" class="row mb-5">
         <div class="col-md-8">              
-            {% include disqus.html %}                
+            {%- include disqus.html -%}                
         </div>
     </div>
     
-    {% endif %}
+    {%- endif -%}
     
 </section>
