--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -12,16 +12,16 @@ post_class: post-template
 
 		<!-- Sidebar -->
         <div class="col-sm-4">
-        {% include sidebar.html %}
+        {%- include sidebar.html -%}
         </div>
 		
 
 		<!-- Post -->        
-        {% if page.author %}
-        {% assign author = site.data.authors[page.author] %}
-        {% else %}
-        {% assign author = site.data.authors[site.author] %}
-        {% endif %}
+        {%- if page.author -%}
+        {%- assign author = site.data.authors[page.author] -%}
+        {%- else -%}
+        {%- assign author = site.data.authors[site.author] -%}
+        {%- endif -%}
 
 		<div class="col-sm-8">
 			<div class="mainheading">              
@@ -29,12 +29,12 @@ post_class: post-template
                 <!-- Post Categories -->
                 <div class="after-post-tags">
                     <ul class="tags">
-                        {% assign sortedCategories = page.categories | sort %}
-                        {% for category in sortedCategories %}
+                        {%- assign sortedCategories = page.categories | sort -%}
+                        {%- for category in sortedCategories -%}
                         <li>
                          <a href="{{ site.baseurl }}/category/{{ category | slugify }}/">{{ category }}</a>
                         </li>
-                        {% endfor %}
+                        {%- endfor -%}
                     </ul>
                 </div>
                 <!-- End Categories -->
@@ -45,7 +45,7 @@ post_class: post-template
 			</div>
 
 			<!-- Post Featured Image -->
-			{% if page.image %}<img class="featured-image img-fluid" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.title }}">{% endif %}
+			{%- if page.image -%}<img class="featured-image img-fluid" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.title }}">{%- endif -%}
 			<!-- End Featured Image -->
 
 			<!-- Post Content -->
@@ -58,9 +58,9 @@ post_class: post-template
             <p>
             <small>
                 <span class="post-date"><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
-                {% if page.last_modified_at %}
+                {%- if page.last_modified_at -%}
                 (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
-                {% endif %}
+                {%- endif -%}
                 </small>
             </p>
             
@@ -68,22 +68,22 @@ post_class: post-template
             
             <!-- Prev/Next -->
             <div class="row PageNavigation mt-4 prevnextlinks">
-              {% if page.previous.url %}
+              {%- if page.previous.url -%}
                 <div class="col-md-6 rightborder pl-0">
                     <a class="thepostlink" href="{{page.previous.url | absolute_url}}">&laquo; {{page.previous.title}}</a>
                 </div>
-              {% endif %}
-              {% if page.next.url %}
+              {%- endif -%}
+              {%- if page.next.url -%}
                 <div class="col-md-6 text-right pr-0">
                     <a class="thepostlink" href="{{page.next.url | absolute_url}}">{{page.next.title}} &raquo;</a>
                 </div>
-              {% endif %}
+              {%- endif -%}
             </div>
             <!-- End Prev/Next -->
             
             
              <!-- Author Box -->
-                {% if page.author %}				
+                {%- if page.author -%}				
 				<div class="row post-top-meta">
 					<div class="col-md-2">
 						<img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
@@ -93,14 +93,14 @@ post_class: post-template
 						<span class="author-description">{{ author.description }}</span>						
 					</div>
 				</div>				
-                {% endif %}
+                {%- endif -%}
             
             
             <!-- Begin Comments
             ================================================== -->
             <section>
             <div id="comments">                          
-                {% include disqus.html %} 
+                {%- include disqus.html -%} 
             </div>
             </section>
             <!--End Comments
