--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="{{site.charset}}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">    
+<link rel="icon" href="{{ site.baseurl }}/{{ site.images.baseurl }}/{{ site.images.favicon }}">    
 <title>{{ page.title }} | {{site.name}}</title>
 {%- if page.description -%}<meta name="description" content="{{ page.description }}">{%- endif -%}    
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -48,7 +48,7 @@
 
         <!-- Begin Logo -->
         <a class="navbar-brand" href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+        <img src="{{ site.baseurl }}/{{ site.images.baseurl }}/{{ site.images.logo }}" alt="{{ site.name }}">
         </a>
         <!-- End Logo -->
 
