--- a/_layouts/circuitjs1.html
+++ b/_layouts/circuitjs1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="{{site.charset}}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">    
+<link rel="icon" href="{{ site.baseurl }}/{{ site.images.baseurl }}/{{ site.images.favicon }}">    
 <title>{{ page.title }} | {{site.name}}</title>
 {%- if page.description -%}<meta name="description" content="{{ page.description }}">{%- endif -%}    
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
