--- a/_layouts/clean.html
+++ b/_layouts/clean.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="{{site.charset}}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">    
+<link rel="icon" href="{{ site.baseurl }}/{{ site.images.baseurl }}/{{ site.images.favicon }} ">    
 <title>{{ page.title }} | {{site.name}}</title>
 {%- if page.description -%}<meta name="description" content="{{ page.description }}">{%- endif -%}    
 {%- if jekyll.environment == 'production' -%}    
