--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Archive
+title: Lista de Artigos do Site
 ---
 
 <!-- Begin List Posts
@@ -9,19 +9,14 @@ title: Archive
     <div class="col-md-4 col-lg-4">
         {%- include sidebar.html -%}
     </div>
-
     <div class="col-md-8 col-lg-8">
         <div class="section-title">
-            <h2><span>{{ page.type }} '{{ page.title }}'</span></h2>
+            <h2><span>{{ page.type }} => '{{ page.title }}'</span></h2>
         </div>
         <div class="masonrygrid row listrecent">
-
             {%- for post in page.posts -%}
-
             {%- include postbox.html -%}
-
             {%- endfor -%}
-
         </div>
     </div>
 </section>
