--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -11,7 +11,7 @@ title: Lista de Artigos do Site
     </div>
     <div class="col-md-8 col-lg-8">
         <div class="section-title">
-            <h2><span>{{ page.type }} => '{{ page.title }}'</span></h2>
+            <h2><span>{{ site.data[site.lang].translate[page.type] }} => '{{ page.title }}'</span></h2>
         </div>
         <div class="masonrygrid row listrecent">
             {%- for post in page.posts -%}
