--- a/_layouts/post-right-sidebar.html
+++ b/_layouts/post-right-sidebar.html
@@ -26,7 +26,7 @@ post_class: post-template
                         {%- assign sortedCategories = page.categories | sort -%}
                         {%- for category in sortedCategories -%}
                         <li>
-                         <a href="{{ site.baseurl }}/category/{{ category | slugify }}/">{{ category }}</a>
+                         <a href="{{ site.baseurl }}/categoria/{{ category | slugify }}/">{{ category }}</a>
                         </li>
                         {%- endfor -%}
                     </ul>
