--- a/_layouts/post-right-sidebar.html
+++ b/_layouts/post-right-sidebar.html
@@ -11,12 +11,6 @@ post_class: post-template
 	<div class="row">
 
 		<!-- Post -->        
-        {%- if page.author -%}
-        {%- assign author = site.data.authors[page.author] -%}
-        {%- else -%}
-        {%- assign author = site.data.authors[site.author] -%}
-        {%- endif -%}
-
 		<div class="col-md-8 col-lg-8">
 			<div class="mainheading">              
                 
@@ -84,7 +78,14 @@ post_class: post-template
             
             
              <!-- Author Box -->
-                {%- if page.author -%}				
+{%- if author != nil -%}
+{%- assign author = site.data.authors[author[0]] -%}
+{%- elsif page.author != nil -%}
+{%- assign author = site.data.authors[page.author] -%}
+{%- else -%}
+{%- assign author = site.data.authors[site.author] -%}
+{%- endif -%}
+                {%- if page.author != nil -%}				
 				<div class="row post-top-meta">
 					<div class="col-md-2">
 						<img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
