--- a/_includes/repositorybox.html
+++ b/_includes/repositorybox.html
@@ -4,8 +4,8 @@
 {%- else -%}
 {%- assign author = site.data.authors[site.author] -%}
 {%- endif -%}
-{%- if post.image.feature != blank -%}
-{%- assign imageurl = post.image.feature -%}
+{%- if post.image.teaser != blank -%}
+{%- assign imageurl = post.image.teaser -%}
 {%- elsif post.image != blank -%}
 {%- assign imageurl = post.image -%}
 {%- else -%}
