--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,34 +57,23 @@
             
             <!-- Begin Menu -->
             <ul class="navbar-nav ml-auto">
-                
-                <li class="nav-item">                
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">In&iacute;cio</a>
-                </li>
 
-                <!--
+
+                {%- for menu in site.data.menu -%}
+                {%- if menu.submenu  -%}
                     <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Artigos</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{{ site.baseurl }}">Left Sidebar</a>
-                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/red-riding.html">Right Sidebar</a>
-                    </div>
-                </li>
-            -->
-                
-                <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/about">Sobre nós</a>
-                </li> 
-                
-                <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/contact">Contato</a>
-                </li> 
-                
-                 <li class="nav-item">                
-                    <a target="_blank" class="nav-link" href="https://github.com/{{site.github.org}}">Github</a>
-                </li> 
-                
-                
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{menu.title}}</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    {%- for submenu in menu.submenu -%}
+                        <a class="dropdown-item" href='{%- unless submenu.url contains "http://" -%}{%- unless submenu.url contains "https://" -%}{{ site.baseurl }}/{%- endunless -%}{%- endunless -%}{{ submenu.url }}' >{{ submenu.title }}</a>
+                    {%- endfor -%}
+                        </div>
+                {%- else-%}    
+                    <li class="nav-item">                
+                        <a class="nav-link" href='{%- unless menu.url contains "http://" -%} {%- unless menu.url contains "https://" -%}{{ site.baseurl }}/{%- endunless -%}{%- endunless -%}{{ menu.url }}' >{{ menu.title }}</a>
+                {%- endif-%}    
+                    </li> 
+                {%- endfor -%}    
             </ul>
             <!-- End Menu -->
             
