Direitos autorais do projeto, novo código para Carlos Delfino Mantendo direito autoral do designer original

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -195,8 +195,11 @@
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }}.
                 </p>
                 <p class="pull-right">
-                <!-- Please, leave credit to author unless you own a commercial license: https://www.wowthemes.net/freebies-license/ --> 
-                <a target="_blank" href="https://www.wowthemes.net/free-jekyll-template-affiliates/">"Affiliates Theme"</a> - Design & Code by WowThemes.net
+                    <!-- Please, leave credit to author unless you own a commercial license: https://www.wowthemes.net/freebies-license/ --> 
+                    <a target="_blank" href="https://www.wowthemes.net/free-jekyll-template-affiliates/">"Affiliates Theme"</a> - Design & Code by WowThemes.net
+                    </p>
+                    <p class="pull-right">
+                    <a target="_blank" href="https://arduinominas.com.br/">"Affiliates Theme"</a> - New Code by Carlos Delfino
                 </p>
                 <div class="clearfix"></div>
             </div>
