--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
 <link href="{{ site.baseurl }}/assets/css/custom.css" rel="stylesheet">
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-{%- if site.sharethis.enable -%}    
-<script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property={{site.sharethis.property}}&product={{site.sharethis.product}}"></script>'
+{%- if site.sharethis.show -%}    
+<script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property={{site.sharethis.property}}&product={{site.sharethis.product}}' async='async'></script>'
 {%- endif -%}    
 
 {%- if jekyll.environment == 'production' -%}    
